CSR: app footer

--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
   },
   "dependencies": {
     "@begin/validator": "^1.0.1",
-    "@enhance-labs/arc-plugin-enhance": "latest",
-    "@enhance-labs/custom-element": "latest",
+    "@enhance/arc-plugin-enhance": "^9.1.2",
+    "@enhance/custom-element": "^1.2.0",
     "@enhance/morphdom-mixin": "^1.1.1",
-    "@enhance/store": "^1.0.1",
+    "@enhance/store": "^1.0.2",
     "@enhance/styles-cribsheet": "^0.0.9",
     "todomvc-app-css": "^2.4.3"
   }
